<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <TextView
        android:id="@+id/stock_monitor_title"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:textSize="30dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/ticker_symbol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/stock_monitor_title"
        android:hint="@string/ticker_symbol_hint"
        android:text="aapl"
        />

     <EditText
         android:id="@+id/start_date"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/ticker_symbol"
         android:hint="@string/start_date"
         android:focusable="false"
         android:text="2015-2-13"
         />

    <EditText
        android:id="@+id/end_date"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ticker_symbol"
        android:layout_toRightOf="@id/start_date"
        android:hint="@string/end_date"
        android:focusable="false"
        android:text="2015-2-16"
        />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ticker_symbol"
        android:layout_alignParentRight="true"
        android:text="@string/search_button"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_date"
        android:paddingTop="10dp"
        android:text="@string/stock_ticker_search_descr"
        />




</RelativeLayout>
